sonar issues fix